Fixed some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html, body, .wrapper {
 	margin-right: 30px;
 	font-size: 2em;
 	margin-left: 0px;
-	margin-bottom: 50px;
+	margin-bottom: 20px;
 	width: 100%;
 }
 
